// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic QuillViewComponent should render and set default snow theme class 1`] = `
<quill-view
  config={[Function Object]}
  customOptions={[Function Array]}
  editorElem={[Function HTMLDivElement]}
  elementRef={[Function ElementRef]}
  platformId={[Function String]}
  preserveWhitespace="false"
  quillEditor={[Function Quill]}
  renderer={[Function DebugRenderer2]}
  strict={[Function Boolean]}
  valueSetter={[Function Function]}
  zone={[Function NgZone]}
>
  <div
    class="ql-container ql-snow ql-disabled ngx-quill-view"
    quill-view-element=""
  >
    <div
      class="ql-editor ql-blank"
      contenteditable="false"
      data-gramm="false"
    >
      <p>
        <br />
      </p>
    </div>
    <div
      class="ql-clipboard"
      contenteditable="true"
      tabindex="-1"
    />
  </div>
</quill-view>
`;

exports[`Formats html should be set html 1`] = `
<ng-component
  content={[Function String]}
  view={[Function QuillViewComponent]}
>
  <quill-view
    format="html"
  >
    <div
      class="ql-container ql-snow ql-disabled ngx-quill-view"
      quill-view-element=""
    >
      <div
        class="ql-editor"
        contenteditable="false"
        data-gramm="false"
      >
        <p>
          Hallo
        </p>
      </div>
      <div
        class="ql-clipboard"
        contenteditable="true"
        tabindex="-1"
      />
    </div>
  </quill-view>
</ng-component>
`;

exports[`Formats html should update html 1`] = `
<ng-component
  content={[Function String]}
  view={[Function QuillViewComponent]}
>
  <quill-view
    format="html"
  >
    <div
      class="ql-container ql-snow ql-disabled ngx-quill-view"
      quill-view-element=""
    >
      <div
        class="ql-editor"
        contenteditable="false"
        data-gramm="false"
      >
        <p>
          test
        </p>
      </div>
      <div
        class="ql-clipboard"
        contenteditable="true"
        tabindex="-1"
      />
    </div>
  </quill-view>
</ng-component>
`;

exports[`Formats json should set json string 1`] = `
<ng-component
  content={[Function String]}
  view={[Function QuillViewComponent]}
>
  <quill-view
    format="json"
  >
    <div
      class="ql-container ql-snow ql-disabled ngx-quill-view"
      quill-view-element=""
    >
      <div
        class="ql-editor"
        contenteditable="false"
        data-gramm="false"
      >
        <p>
          Hallo
        </p>
      </div>
      <div
        class="ql-clipboard"
        contenteditable="true"
        tabindex="-1"
      />
    </div>
  </quill-view>
</ng-component>
`;

exports[`Formats json should update json string 1`] = `
<ng-component
  content={[Function String]}
  view={[Function QuillViewComponent]}
>
  <quill-view
    format="json"
  >
    <div
      class="ql-container ql-snow ql-disabled ngx-quill-view"
      quill-view-element=""
    >
      <div
        class="ql-editor"
        contenteditable="false"
        data-gramm="false"
      >
        <p>
          Hallo 123
        </p>
      </div>
      <div
        class="ql-clipboard"
        contenteditable="true"
        tabindex="-1"
      />
    </div>
  </quill-view>
</ng-component>
`;

exports[`Formats object should be set object 1`] = `
<ng-component
  content={[Function Array]}
  view={[Function QuillViewComponent]}
>
  <quill-view
    format="object"
  >
    <div
      class="ql-container ql-snow ql-disabled ngx-quill-view"
      quill-view-element=""
    >
      <div
        class="ql-editor"
        contenteditable="false"
        data-gramm="false"
      >
        <p>
          Hello
        </p>
      </div>
      <div
        class="ql-clipboard"
        contenteditable="true"
        tabindex="-1"
      />
    </div>
  </quill-view>
</ng-component>
`;

exports[`Formats object should update object content 1`] = `
<ng-component
  content={[Function Array]}
  view={[Function QuillViewComponent]}
>
  <quill-view
    format="object"
  >
    <div
      class="ql-container ql-snow ql-disabled ngx-quill-view"
      quill-view-element=""
    >
      <div
        class="ql-editor"
        contenteditable="false"
        data-gramm="false"
      >
        <p>
          1234
        </p>
      </div>
      <div
        class="ql-clipboard"
        contenteditable="true"
        tabindex="-1"
      />
    </div>
  </quill-view>
</ng-component>
`;

exports[`Formats text should be set text 1`] = `
<ng-component
  content={[Function String]}
  view={[Function QuillViewComponent]}
>
  <quill-view
    format="text"
  >
    <div
      class="ql-container ql-snow ql-disabled ngx-quill-view"
      quill-view-element=""
    >
      <div
        class="ql-editor"
        contenteditable="false"
        data-gramm="false"
      >
        <p>
          Hallo
        </p>
      </div>
      <div
        class="ql-clipboard"
        contenteditable="true"
        tabindex="-1"
      />
    </div>
  </quill-view>
</ng-component>
`;

exports[`Formats text should update text 1`] = `
<ng-component
  content={[Function String]}
  view={[Function QuillViewComponent]}
>
  <quill-view
    format="text"
  >
    <div
      class="ql-container ql-snow ql-disabled ngx-quill-view"
      quill-view-element=""
    >
      <div
        class="ql-editor"
        contenteditable="false"
        data-gramm="false"
      >
        <p>
          test
        </p>
      </div>
      <div
        class="ql-clipboard"
        contenteditable="true"
        tabindex="-1"
      />
    </div>
  </quill-view>
</ng-component>
`;
